# agnovat-analyst

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  REMOTE_DEPLOYMENT.md  deploy-remote.sh  docker-compose.production.yml  docker-compose.yml  docker-deploy.sh  docker-manage.sh  mcp-tools.md  mcp_server.py  mcp_server_remote.py  nginx.conf.template  prd.md  pyproject.toml  qcat-appeal-temp.md  requirements.txt  security-setup.sh  setup.sh  setup_claude_desktop.sh  start_for_claude.sh  test_mcp_connection.py  test_mcp_stdio.sh
app/: __init__.py  config.py  main.py
app/models/: __init__.py  analysis.py  base.py  legal.py  pdf.py  reports.py
app/services/: __init__.py  comparison_timeline_service.py  document_analysis_service.py  evidence_extraction_service.py  legal_framework_service.py  ndis_goals_service.py  nlp_service.py  pdf_service.py  report_generation_service.py
app/tools/: __init__.py  analysis.py  legal.py  pdf.py  reports.py
app/utils/: __init__.py
configs/: README.md  cline_config.json  continue_config.json  langchain_integration.py
docs/: DEPLOYMENT.md  MCP_INTEGRATION.md  QUICK_START.md  USER_GUIDE.md
tests/: __init__.py  test_all_tools.py  test_pdf_tools.py
